--- a/templates/main.html
+++ b/templates/main.html
@@ -165,6 +165,8 @@
             <form method="POST">
                 <button type="submit" name="button" value="Y">Y</button>
                 <button type="submit" name="button" value="N">N</button>
+                <button type="submit" name="button" value="OPEN">창문 열기</button>
+                <button type="submit" name="button" value="CLOSE">창문 닫기</button>
             </form>
         </div>
     </div>
