디렉토리 정리 및 api key 보안처리

--- a/templates/main.html
+++ b/templates/main.html
@@ -165,8 +165,11 @@
             <form method="POST">
                 <button type="submit" name="button" value="Y">Y</button>
                 <button type="submit" name="button" value="N">N</button>
+
                 <button type="submit" name="button" value="OPEN">창문 열기</button>
                 <button type="submit" name="button" value="CLOSE">창문 닫기</button>
+
+                <button type="submit" name="button" value="WEATHER">날씨 api</button>
             </form>
         </div>
     </div>
