--- a/templates/main.html
+++ b/templates/main.html
@@ -165,11 +165,24 @@
             <form method="POST">
                 <button type="submit" name="button" value="Y">Y</button>
                 <button type="submit" name="button" value="N">N</button>
+            </form>
+        </div>
 
+        <div>
+            <p>부가 기능</p>
+            <form method="POST">
                 <button type="submit" name="button" value="OPEN">창문 열기</button>
                 <button type="submit" name="button" value="CLOSE">창문 닫기</button>
 
                 <button type="submit" name="button" value="WEATHER">날씨 api</button>
+            </form>
+        </div>
+
+        <div>
+            <p>카메라 관련 기능</p>
+            <form method="POST">
+                <button type="submit" name="button" value="CAMdata">인식 정보</button>
+                <button type="submit" name="button" value="CAMwrite">인식 시작</button>
             </form>
         </div>
     </div>
