--- a/templates/main.html
+++ b/templates/main.html
@@ -218,17 +218,6 @@
         }
 
         // 페이지 로드 시 카메라 데이터 불러오기
-        document.addEventListener('DOMContentLoaded', loadCameraData);
-
-        document.getElementById('weather-button').addEventListener('click', updateWeatherData);
-        function updateWeatherData() {
-            fetch('/get_weather_data')
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById('weather-data').textContent = data || 'N/A';
-                })
-                .catch(error => console.error('Error fetching weather data:', error));
-        }
 
         function updateCAMData() {
             fetch('/get_cam_detect_data')
@@ -240,6 +229,14 @@
 
 
         function sendAction(action) {
+        if (action === 'WEATHER') {
+            fetch('/get_weather_data')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('weather-data').textContent = JSON.stringify(data) || 'N/A';
+                })
+                .catch(error => console.error('Error fetching weather data:', error));
+        } else {
             fetch('/', {
                 method: 'POST',
                 headers: {
@@ -253,13 +250,6 @@
             .then(data => {
                 if (data.success) {
                     console.log(`${action} action was successful`);
-                    // Optionally, update the UI or provide user feedback
-                    if (action === 'WEATHER') {
-                        updateWeatherData();
-                    }
-                    else if (action === 'CAMdata'){
-                        updateCAMData();
-                    }
                 } else {
                     console.error(`Failed to perform ${action} action`);
                 }
@@ -268,6 +258,7 @@
                 console.error('Error:', error);
             });
         }
+    }
     </script>
 </head>
 <body>
