--- a/templates/main.html
+++ b/templates/main.html
@@ -236,6 +236,21 @@
                     document.getElementById('weather-data').textContent = JSON.stringify(data) || 'N/A';
                 })
                 .catch(error => console.error('Error fetching weather data:', error));
+        } else if(action === 'CAMdata'){
+            fetch('/get_cam_data')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        console.error('Error fetching camera data:', data.error);
+                        document.getElementById('camera-data-container').innerHTML = "<p>카메라 데이터를 불러오는 중 오류가 발생했습니다.</p>";
+                    } else {
+                        document.getElementById('camera-data-container').innerHTML = data.data;
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching camera data:', error);
+                    document.getElementById('camera-data-container').innerHTML = "<p>카메라 데이터를 불러오는 중 오류가 발생했습니다.</p>";
+                });
         } else {
             fetch('/', {
                 method: 'POST',
