--- a/templates/main.html
+++ b/templates/main.html
@@ -616,12 +616,12 @@
         </h1>
         <nav class="menu-container">
           <ul class="menu">
-            <li onclick="sendAction('monitor')">현재 환경 모니터</li>
-            <li onclick="sendAction('set')">값 설정</li>
-            <li onclick="sendAction('door')">문 상태</li>
-            <li onclick="sendAction('weather')">기상청 날씨</li>
-            <li onclick="sendAction('camera')">카메라 정보</li>
-            <li onclick="sendAction('video')">비디오 정보</li>
+            <li><button onclick="sendAction('monitor')">현재 환경 모니터</button></li>
+            <li><button onclick="sendAction('set')">값 설정</button></li>
+            <li><button onclick="sendAction('door')">문 상태</button></li>
+            <li><button onclick="sendAction('weather')">기상청 날씨</button></li>
+            <li><button onclick="sendAction('camera')">카메라 정보</button></li>
+            <li><button onclick="sendAction('video')">비디오 정보</button></li>
           </ul>
         </nav>
       </div>
