--- a/templates/main (1).html
+++ b/templates/main (1).html
@@ -616,12 +616,12 @@
         </h1>
         <nav class="menu-container">
           <ul class="menu">
-            <li><a href="monitor.html">현재 환경 모니터</a></li>
-            <li><a href="set.html">값 설정</a></li>
-            <li><a href="door.html">문 상태</a></li>
-            <li><a href="weather.html">기상청 날씨</a></li>
-            <li><a href="camera.html">카메라 정보</a></li>
-            <li><a href="video.html">비디오 정보</a></li>
+            <li><button onclick="sendAction('monitor')">현재 환경 모니터</button></li>
+            <li><button onclick="sendAction('set')">값 설정</button></li>
+            <li><button onclick="sendAction('door')">문 상태</button></li>
+            <li><button onclick="sendAction('weather')">기상청 날씨</button></li>
+            <li><button onclick="sendAction('camera')">카메라 정보</button></li>
+            <li><button onclick="sendAction('video')">비디오 정보</button></li>
           </ul>
         </nav>
       </div>
