--- a/templates/main (1).html
+++ b/templates/main (1).html
@@ -607,7 +607,7 @@
     </script>
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="header-container" style="position: relative">
         <h1>
           <a href="main.html" class="logo">
@@ -625,7 +625,7 @@
           </ul>
         </nav>
       </div>
-    </header>
+    </header> -->
 
     <!-- 현재 환경 모니터 컨테이너 -->
     <div class="monitor-section">
